--- a/login.html
+++ b/login.html
@@ -1,84 +1,118 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Sistem Absensi</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         tailwind.config = {
             darkMode: 'class',
             theme: { extend: { colors: { darkbg: '#0f172a', darkcard: '#1e293b' } } }
         }
-        // Tema gelap otomatis sesuai preferensi sistem/localstorage
         if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
             document.documentElement.classList.add('dark');
         }
     </script>
+    <style>
+        .loader { border-top-color: #3b82f6; animation: spinner 1.5s linear infinite; }
+        @keyframes spinner { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+    </style>
 </head>
+<body class="bg-gray-100 dark:bg-darkbg text-gray-800 dark:text-gray-200 min-h-screen flex items-center justify-center p-4">
 
-<body
-    class="bg-gray-100 dark:bg-darkbg text-gray-800 dark:text-gray-200 min-h-screen flex items-center justify-center p-4">
-
-    <div
-        class="max-w-md w-full bg-white dark:bg-darkcard rounded-2xl shadow-xl border border-gray-200 dark:border-gray-700 overflow-hidden">
+    <div class="max-w-md w-full bg-white dark:bg-darkcard rounded-2xl shadow-xl border border-gray-200 dark:border-gray-700 overflow-hidden">
         <div class="p-8">
             <div class="text-center mb-8">
-                <h1 class="text-3xl font-extrabold text-gray-900 dark:text-white tracking-tight">📝 ABSENSI</h1>
-                <p class="text-sm text-gray-500 dark:text-gray-400 mt-2">Silakan login untuk mengelola data</p>
+                <div class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-blue-100 dark:bg-blue-900 mb-4">
+                    <i data-lucide="calendar-check" class="w-6 h-6 text-blue-600 dark:text-blue-300"></i>
+                </div>
+                <h1 class="text-3xl font-extrabold text-gray-900 dark:text-white tracking-tight">ABSENSI</h1>
+                <p class="text-sm text-gray-500 dark:text-gray-400 mt-2">Masuk untuk mengelola kehadiran siswa</p>
             </div>
 
             <div class="space-y-4">
-                <button id="btnGoogleLogin"
-                    class="w-full flex items-center justify-center gap-3 bg-white hover:bg-gray-50 text-gray-700 font-semibold py-3 px-4 rounded-xl border border-gray-300 shadow-sm transition transform active:scale-95">
-                    <img src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" class="w-5 h-5"
-                        alt="Google Logo">
-                    <span>Masuk dengan Google</span>
+                <button id="btnGoogleLogin" class="w-full flex items-center justify-center gap-3 bg-white hover:bg-gray-50 text-gray-700 font-semibold py-3 px-4 rounded-xl border border-gray-300 shadow-sm transition transform active:scale-95 disabled:opacity-50">
+                    <img id="g-logo" src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png" class="w-5 h-5" alt="Google Logo">
+                    <div id="loader-icon" class="hidden loader w-5 h-5 border-2 border-gray-200 rounded-full"></div>
+                    <span id="btn-text">Masuk dengan Google</span>
                 </button>
 
                 <div class="relative flex py-3 items-center">
                     <div class="flex-grow border-t border-gray-300 dark:border-gray-600"></div>
-                    <span class="flex-shrink mx-4 text-gray-400 text-xs uppercase">Atau</span>
+                    <span class="flex-shrink mx-4 text-gray-400 text-xs uppercase font-bold">Atau</span>
                     <div class="flex-grow border-t border-gray-300 dark:border-gray-600"></div>
                 </div>
 
                 <div class="space-y-3">
-                    <input type="text" id="username" placeholder="Username"
-                        class="w-full p-3 rounded-xl border bg-gray-50 dark:bg-gray-800 dark:border-gray-600 text-sm outline-none focus:ring-2 focus:ring-blue-500 transition">
-                    <input type="password" id="password" placeholder="Password"
-                        class="w-full p-3 rounded-xl border bg-gray-50 dark:bg-gray-800 dark:border-gray-600 text-sm outline-none focus:ring-2 focus:ring-blue-500 transition">
-                    <button id="btnLogin"
-                        class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-xl transition active:scale-95 text-sm">
-                        LOGIN MANUAL
+                    <div class="relative">
+                        <i data-lucide="user" class="absolute left-3 top-3.5 w-5 h-5 text-gray-400"></i>
+                        <input type="text" id="username" placeholder="Username" class="w-full pl-10 p-3 rounded-xl border bg-gray-50 dark:bg-gray-800 dark:border-gray-600 text-sm outline-none focus:ring-2 focus:ring-blue-500 transition">
+                    </div>
+                    <div class="relative">
+                        <i data-lucide="lock" class="absolute left-3 top-3.5 w-5 h-5 text-gray-400"></i>
+                        <input type="password" id="password" placeholder="Password" class="w-full pl-10 p-3 rounded-xl border bg-gray-50 dark:bg-gray-800 dark:border-gray-600 text-sm outline-none focus:ring-2 focus:ring-blue-500 transition">
+                    </div>
+                    <button id="btnLogin" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-xl transition active:scale-95 text-sm flex justify-center items-center gap-2">
+                        LOGIN MANUAL <i data-lucide="arrow-right" class="w-4 h-4"></i>
                     </button>
                 </div>
             </div>
 
             <div class="mt-8 pt-6 border-t dark:border-gray-700 text-center">
-                <p class="text-xs text-gray-400">Pusat Bantuan: IT Support Absensi</p>
+                <p class="text-xs text-gray-400 flex justify-center items-center gap-1">
+                    <i data-lucide="life-buoy" class="w-3 h-3"></i> Pusat Bantuan: IT Support Absensi
+                </p>
             </div>
         </div>
     </div>
 
     <script type="module">
+        import { initAuthGuard } from './assets/js/utils/auth-guard.js';
         import { authService } from './assets/js/firebase/auth-service.js';
-        import { showToast } from './assets/js/utils/ui.js';
+        import { auth } from './assets/js/firebase/config.js';
+        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-auth.js";
 
-        document.getElementById('btnGoogleLogin').addEventListener('click', async () => {
+        lucide.createIcons();
+
+        const btn = document.getElementById('btnGoogleLogin');
+        const btnText = document.getElementById('btn-text');
+        const loader = document.getElementById('loader-icon');
+        const gLogo = document.getElementById('g-logo');
+
+        onAuthStateChanged(auth, async (user) => {
+            if (user) { console.log("Session aktif:", user.email); }
+        });
+
+        btn.addEventListener('click', async () => {
+            btn.disabled = true;
+            btnText.innerText = "Memproses...";
+            gLogo.classList.add('hidden');
+            loader.classList.remove('hidden');
+
             try {
-                const user = await authService.loginWithGoogle();
-                showToast(`Selamat datang, ${user.displayName}!`, "success");
-
-                // Simpan data user minimalis ke localStorage jika perlu
-                localStorage.setItem('user_token', user.accessToken);
-
-                setTimeout(() => window.location.href = 'index.html', 1500);
+                const userData = await authService.loginWithGoogle();
+                if (userData.role === 'admin') {
+                    window.location.href = 'admin.html';
+                } else if (userData.isVerified) {
+                    window.location.href = 'index.html';
+                } else {
+                    alert("Akun terdaftar! Mohon tunggu verifikasi Admin.");
+                    resetBtn();
+                }
             } catch (error) {
-                showToast(error.message, "error");
+                alert("Gagal Masuk: " + error.message);
+                resetBtn();
             }
         });
+
+        function resetBtn() {
+            btn.disabled = false;
+            btnText.innerText = "Masuk dengan Google";
+            gLogo.classList.remove('hidden');
+            loader.classList.add('hidden');
+        }
     </script>
 </body>
-
 </html>
