refactor: unify logout button IDs across admin, index, and users pages

--- a/admin.html
+++ b/admin.html
@@ -50,7 +50,7 @@
                         class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-700 transition text-gray-500">
                         <i data-lucide="sun-moon" class="w-5 h-5"></i>
                     </button>
-                    <button id="btnLogoutDesktop" class="text-red-500 hover:text-red-700 p-2 transition font-bold">
+                    <button id="btnLogout" class="text-red-500 hover:text-red-700 p-2 transition font-bold">
                         <i data-lucide="log-out" class="w-5 h-5"></i>
                     </button>
                 </div>
@@ -81,7 +81,7 @@
                     class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
                     <i data-lucide="sun-moon" class="inline w-4 h-4 mr-2"></i> Ganti Tema
                 </button>
-                <button id="btnLogoutMobile"
+                <button id="btnLogout"
                     class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">
                     <i data-lucide="log-out" class="inline w-4 h-4 mr-2"></i> Keluar
                 </button>
