--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
 
                     <div class="h-6 w-px bg-gray-300 dark:bg-gray-600 mx-1"></div>
 
-                    <button id="btnThemeDesktop" onclick="toggleTheme()"
-                        class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition text-gray-500">
-                        <i data-lucide="moon" class="w-5 h-5 dark:hidden"></i>
-                        <i data-lucide="sun" class="w-5 h-5 hidden dark:block"></i>
+                    <button onclick="toggleTheme()"
+                        class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-700 transition text-gray-500">
+                        <i data-lucide="sun-moon" class="w-5 h-5"></i>
                     </button>
 
-                    <button id="btnLogoutDesktop" class="text-red-500 hover:text-red-700 p-2 transition" title="Keluar">
+                    <button id="btnLogout" class="text-red-500 hover:text-red-700 p-2 transition" title="Keluar">
                         <i data-lucide="log-out" class="w-5 h-5"></i>
                     </button>
                 </div>
@@ -78,13 +77,11 @@
                 </button>
 
                 <button onclick="toggleTheme()"
-                    class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">
-                    <div class="flex items-center gap-2">
-                        <i data-lucide="sun-moon" class="w-4 h-4"></i> Ganti Tema
-                    </div>
+                    class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
+                    <i data-lucide="sun-moon" class="inline w-4 h-4 mr-2"></i> Ganti Tema
                 </button>
 
-                <button id="btnLogoutMobile"
+                <button id="btnLogout"
                     class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">
                     <div class="flex items-center gap-2"><i data-lucide="log-out" class="w-4 h-4"></i> Keluar</div>
                 </button>
