--- a/admin.html
+++ b/admin.html
@@ -23,7 +23,7 @@
     <nav class="bg-white dark:bg-darkcard border-b border-gray-200 dark:border-gray-700 sticky top-0 z-50 shadow-sm">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
-
+                <!-- Left: Logo + Back Button -->
                 <div class="flex items-center gap-4">
                     <div class="flex items-center gap-2 text-indigo-600 dark:text-indigo-400">
                         <i data-lucide="layout-dashboard" class="w-6 h-6"></i>
@@ -35,7 +35,8 @@
                     </a>
                 </div>
 
-                <div class="hidden md:flex items-center gap-4">
+                <!-- Right: Desktop Menu -->
+                <div class="hidden md:flex items-center gap-3">
                     <a href="admin.html"
                         class="text-sm font-medium text-gray-500 hover:text-indigo-600 dark:text-gray-400 dark:hover:text-indigo-400 flex items-center gap-1 transition">
                         <i data-lucide="database" class="w-4 h-4"></i> Data Master
@@ -44,17 +45,14 @@
                         class="text-sm font-medium text-gray-500 hover:text-indigo-600 dark:text-gray-400 dark:hover:text-indigo-400 flex items-center gap-1 transition">
                         <i data-lucide="users" class="w-4 h-4"></i> Users
                     </a>
+
                     <div class="h-6 w-px bg-gray-300 dark:bg-gray-600"></div>
 
-                    <button onclick="toggleTheme()"
-                        class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-700 transition text-gray-500">
-                        <i data-lucide="sun-moon" class="w-5 h-5"></i>
-                    </button>
-                    <button id="btnLogout" class="text-red-500 hover:text-red-700 p-2 transition font-bold">
-                        <i data-lucide="log-out" class="w-5 h-5"></i>
-                    </button>
+                    <!-- Profile Component (NEW) -->
+                    <div id="navbar-profile"></div>
                 </div>
 
+                <!-- Mobile Menu Button -->
                 <div class="flex items-center md:hidden">
                     <button id="mobile-menu-btn" class="text-gray-500 p-2 rounded-md">
                         <i data-lucide="menu" class="w-6 h-6"></i>
@@ -63,8 +61,14 @@
             </div>
         </div>
 
+        <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-white dark:bg-darkcard border-t dark:border-gray-700">
             <div class="px-4 pt-2 pb-4 space-y-1 shadow-lg">
+                <!-- Profile in Mobile (NEW) -->
+                <div class="border-b dark:border-gray-700 pb-3 mb-2">
+                    <div id="navbar-profile-mobile" class="px-3 py-2"></div>
+                </div>
+
                 <a href="index.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-gray-600 hover:bg-gray-50 dark:text-gray-300 dark:hover:bg-gray-800">
                     <i data-lucide="arrow-left" class="inline w-4 h-4 mr-2"></i> Ke Absensi
@@ -81,13 +85,14 @@
                     class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
                     <i data-lucide="sun-moon" class="inline w-4 h-4 mr-2"></i> Ganti Tema
                 </button>
-                <button id="btnLogout"
+                <button onclick="handleLogout()"
                     class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">
                     <i data-lucide="log-out" class="inline w-4 h-4 mr-2"></i> Keluar
                 </button>
             </div>
         </div>
     </nav>
+
 
     <main class="max-w-7xl mx-auto p-4 sm:p-6 lg:p-8 grid grid-cols-1 lg:grid-cols-3 gap-8">
 
@@ -268,13 +273,14 @@
         import { toggleTheme } from './assets/js/utils/ui.js';
         import { initAuthGuard } from './assets/js/utils/auth-guard.js';
         import './assets/js/pages/admin.js';
+        import { initNavbarProfile } from './assets/js/components/navbar.js';
 
         window.toggleTheme = toggleTheme;
         // 1. Init System
         lucide.createIcons();
         initAuthGuard({ requireAdmin: false });
+        initNavbarProfile();
 
-        // 2. Mobile Menu Logic (Digabung disini agar rapi)
         document.getElementById('mobile-menu-btn')?.addEventListener('click', () => {
             document.getElementById('mobile-menu').classList.toggle('hidden');
         });
