--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     <nav class="bg-white dark:bg-darkcard border-b border-gray-200 dark:border-gray-700 sticky top-0 z-50 shadow-sm">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
-
+                <!-- Left: Logo -->
                 <div class="flex items-center gap-2 text-indigo-600 dark:text-indigo-400">
                     <i data-lucide="clipboard-check" class="w-6 h-6"></i>
                     <h1 class="font-bold text-xl tracking-tight text-gray-900 dark:text-white">Absensi</h1>
                 </div>
 
-                <div class="hidden md:flex items-center gap-2">
+                <!-- Right: Desktop Menu -->
+                <div class="hidden md:flex items-center gap-3">
                     <a href="admin.html"
                         class="admin-only hidden bg-purple-100 text-purple-700 hover:bg-purple-200 px-3 py-2 rounded-lg text-xs font-bold border border-purple-200 transition items-center gap-2">
                         <i data-lucide="shield" class="w-4 h-4"></i> Admin Panel
@@ -42,18 +43,13 @@
                         <i data-lucide="bar-chart-3" class="w-4 h-4"></i> Rekap
                     </button>
 
-                    <div class="h-6 w-px bg-gray-300 dark:bg-gray-600 mx-1"></div>
+                    <div class="h-6 w-px bg-gray-300 dark:bg-gray-600"></div>
 
-                    <button onclick="toggleTheme()"
-                        class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-700 transition text-gray-500">
-                        <i data-lucide="sun-moon" class="w-5 h-5"></i>
-                    </button>
-
-                    <button id="btnLogout" class="text-red-500 hover:text-red-700 p-2 transition" title="Keluar">
-                        <i data-lucide="log-out" class="w-5 h-5"></i>
-                    </button>
+                    <!-- Profile Component (NEW) -->
+                    <div id="navbar-profile"></div>
                 </div>
 
+                <!-- Mobile Menu Button -->
                 <div class="flex items-center md:hidden">
                     <button id="mobile-menu-btn"
                         class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-white p-2 rounded-md focus:outline-none">
@@ -63,8 +59,14 @@
             </div>
         </div>
 
+        <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-white dark:bg-darkcard border-t dark:border-gray-700">
             <div class="px-4 pt-2 pb-4 space-y-2 shadow-lg">
+                <!-- Profile in Mobile (NEW) -->
+                <div class="border-b dark:border-gray-700 pb-3 mb-2">
+                    <div id="navbar-profile-mobile" class="px-3 py-2"></div>
+                </div>
+
                 <a href="admin.html"
                     class="admin-only hidden block w-full text-left px-3 py-2 rounded-md text-base font-medium text-purple-700 bg-purple-50 dark:bg-purple-900/20">
                     <div class="flex items-center gap-2"><i data-lucide="shield" class="w-4 h-4"></i> Admin Panel</div>
@@ -81,7 +83,7 @@
                     <i data-lucide="sun-moon" class="inline w-4 h-4 mr-2"></i> Ganti Tema
                 </button>
 
-                <button id="btnLogout"
+                <button onclick="handleLogout()"
                     class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">
                     <div class="flex items-center gap-2"><i data-lucide="log-out" class="w-4 h-4"></i> Keluar</div>
                 </button>
@@ -223,19 +225,22 @@
     <script type="module">
         import { toggleTheme } from './assets/js/utils/ui.js';
         import { initAuthGuard } from './assets/js/utils/auth-guard.js';
+        import { initNavbarProfile } from './assets/js/components/navbar.js';
 
         window.toggleTheme = toggleTheme;
         // 1. Init Icons & Auth
         lucide.createIcons();
         initAuthGuard({ requireAdmin: false });
+        initNavbarProfile();
 
         // 2. Event Listeners (Dengan pengecekan null '?' agar tidak error)
         document.getElementById('btnTheme')?.addEventListener('click', toggleTheme);
         document.getElementById('btnThemeDesktop')?.addEventListener('click', toggleTheme);
-        
+
         document.getElementById('mobile-menu-btn')?.addEventListener('click', () => {
             document.getElementById('mobile-menu').classList.toggle('hidden');
         });
+
     </script>
 </body>
 
