feat: add user management functionality with real-time updates and profile component

--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
                     <span id="btn-text">Masuk dengan Google</span>
                 </button>
 
-                <div class="relative flex py-3 items-center">
+                <!-- <div class="relative flex py-3 items-center">
                     <div class="flex-grow border-t border-gray-300 dark:border-gray-600"></div>
                     <span class="flex-shrink mx-4 text-gray-400 text-xs uppercase font-bold">Atau</span>
                     <div class="flex-grow border-t border-gray-300 dark:border-gray-600"></div>
@@ -57,7 +57,7 @@
                     <button id="btnLogin" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-xl transition active:scale-95 text-sm flex justify-center items-center gap-2">
                         LOGIN MANUAL <i data-lucide="arrow-right" class="w-4 h-4"></i>
                     </button>
-                </div>
+                </div> -->
             </div>
 
             <div class="mt-8 pt-6 border-t dark:border-gray-700 text-center">
