--- a/admin.html
+++ b/admin.html
@@ -95,8 +95,36 @@
 
 
     <main class="max-w-7xl mx-auto p-4 sm:p-6 lg:p-8 grid grid-cols-1 lg:grid-cols-3 gap-8">
-
         <section class="lg:col-span-1 space-y-6">
+            <div class="w-full col-span-full mb-6">
+                <div
+                    class="bg-white dark:bg-gray-800 p-6 rounded-xl shadow-sm border border-gray-200 dark:border-gray-700 flex flex-col sm:flex-row justify-between items-start sm:items-center gap-4">
+
+                    <div>
+                        <h2 class="text-xl font-bold text-gray-900 dark:text-white flex items-center gap-2">
+                            <i data-lucide="building-2" class="w-6 h-6 text-blue-600"></i>
+                            Identitas Sekolah
+                        </h2>
+                        <p class="text-sm text-gray-500 mt-1">
+                            Data ini digunakan otomatis untuk Kop Surat & Tanda Tangan PDF.
+                        </p>
+                    </div>
+
+                    <button onclick="openSchoolSettings()"
+                        class="w-full sm:w-auto flex items-center justify-center gap-2 bg-slate-800 hover:bg-slate-900 dark:bg-slate-700 dark:hover:bg-slate-600 text-white px-5 py-2.5 rounded-lg transition-all active:scale-95 shadow-lg shadow-slate-200 dark:shadow-none">
+                        <i data-lucide="settings" class="w-4 h-4"></i>
+                        <span>Edit Data Kepala Sekolah</span>
+                    </button>
+                </div>
+            </div>
+
+            <div
+                class="bg-blue-50 dark:bg-slate-800 p-4 rounded-xl text-sm text-blue-800 dark:text-blue-200 border border-blue-100 dark:border-blue-900 flex gap-3">
+                <i data-lucide="info" class="w-5 h-5 flex-shrink-0 mt-0.5"></i>
+                <p><strong>Info:</strong> Pilih kelas di tabel sebelah kanan untuk memfilter daftar siswa.</p>
+            </div>
+        </section>
+        <section class="lg:col-span-2 space-y-6">
             <div class="bg-white dark:bg-darkcard rounded-xl shadow-sm border border-gray-200 dark:border-gray-700 p-6">
                 <h2 class="text-lg font-bold mb-4 flex items-center gap-2">
                     <i data-lucide="layers" class="w-5 h-5 text-indigo-500"></i> Master Kelas
@@ -121,7 +149,7 @@
             </div>
         </section>
 
-        <section class="lg:col-span-2 space-y-6">
+        <section class="lg:col-span-3 space-y-6">
             <div class="bg-white dark:bg-darkcard rounded-xl shadow-sm border border-gray-200 dark:border-gray-700 p-6">
                 <div class="flex justify-between items-center mb-6">
                     <h2 class="text-lg font-bold flex items-center gap-2">
