--- a/index.html
+++ b/index.html
@@ -22,74 +22,74 @@
 
 <body class="bg-gray-50 text-gray-800 dark:bg-darkbg dark:text-gray-200 min-h-screen transition-colors duration-300">
 
-    <nav class="bg-white dark:bg-darkcard border-b border-gray-200 dark:border-gray-700 sticky top-0 z-50 shadow-sm">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between h-16">
-                <!-- Left: Logo -->
-                <div class="flex items-center gap-2 text-indigo-600 dark:text-indigo-400">
-                    <i data-lucide="clipboard-check" class="w-6 h-6"></i>
-                    <h1 class="font-bold text-xl tracking-tight text-gray-900 dark:text-white">Absensi</h1>
+    <nav class="sticky top-0 z-50 bg-white dark:bg-darkcard border-b border-gray-200 dark:border-gray-700">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="flex h-16 items-center justify-between">
+
+                <!-- LEFT -->
+                <div class="flex items-center gap-3">
+                    <i data-lucide="clipboard-check" class="w-6 h-6 text-indigo-600"></i>
+                    <h1 class="text-lg font-bold text-gray-900 dark:text-white">
+                        Absensi
+                    </h1>
                 </div>
 
-                <!-- Right: Desktop Menu -->
-                <div class="hidden md:flex items-center gap-3">
+                <!-- RIGHT DESKTOP -->
+                <div class="hidden md:flex items-center gap-4">
                     <a href="admin.html"
-                        class="admin-only hidden bg-purple-100 text-purple-700 hover:bg-purple-200 px-3 py-2 rounded-lg text-xs font-bold border border-purple-200 transition items-center gap-2">
+                        class="admin-only hidden flex items-center gap-2 px-3 py-2 text-xs font-bold text-purple-700 bg-purple-100 rounded-lg">
                         <i data-lucide="shield" class="w-4 h-4"></i> Admin Panel
                     </a>
 
                     <button onclick="openMonthlyModal()"
-                        class="bg-indigo-50 dark:bg-indigo-900/30 hover:bg-indigo-100 dark:hover:bg-indigo-900 text-indigo-700 dark:text-indigo-300 px-3 py-2 rounded-lg text-xs font-bold border border-indigo-200 dark:border-indigo-700 flex items-center gap-2 transition">
+                        class="flex items-center gap-2 px-3 py-2 text-xs font-bold text-indigo-700 bg-indigo-50 rounded-lg">
                         <i data-lucide="bar-chart-3" class="w-4 h-4"></i> Rekap
                     </button>
 
                     <div class="h-6 w-px bg-gray-300 dark:bg-gray-600"></div>
-
-                    <!-- Profile Component (NEW) -->
                     <div id="navbar-profile"></div>
                 </div>
 
-                <!-- Mobile Menu Button -->
-                <div class="flex items-center md:hidden">
-                    <button id="mobile-menu-btn"
-                        class="text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-white p-2 rounded-md focus:outline-none">
-                        <i data-lucide="menu" class="w-6 h-6"></i>
-                    </button>
-                </div>
+                <!-- MOBILE BUTTON -->
+                <button id="mobile-menu-btn"
+                    class="md:hidden p-2 rounded-lg text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <i data-lucide="menu" class="w-6 h-6"></i>
+                </button>
             </div>
         </div>
 
-        <!-- Mobile Menu -->
-        <div id="mobile-menu" class="hidden md:hidden bg-white dark:bg-darkcard border-t dark:border-gray-700">
-            <div class="px-4 pt-2 pb-4 space-y-2 shadow-lg">
-                <!-- Profile in Mobile (NEW) -->
+        <!-- MOBILE MENU -->
+        <div id="mobile-menu"
+            class="hidden md:hidden bg-white dark:bg-darkcard border-t border-gray-200 dark:border-gray-700">
+            <div class="px-4 py-4 space-y-2">
+
                 <div class="border-b dark:border-gray-700 pb-3 mb-2">
-                    <div id="navbar-profile-mobile" class="px-3 py-2"></div>
+                    <div id="navbar-profile-mobile"></div>
                 </div>
 
                 <a href="admin.html"
-                    class="admin-only hidden block w-full text-left px-3 py-2 rounded-md text-base font-medium text-purple-700 bg-purple-50 dark:bg-purple-900/20">
-                    <div class="flex items-center gap-2"><i data-lucide="shield" class="w-4 h-4"></i> Admin Panel</div>
+                    class="admin-only hidden flex items-center gap-3 px-3 py-3 rounded-lg text-purple-700 bg-purple-50">
+                    <i data-lucide="shield" class="w-5 h-5"></i> Admin Panel
                 </a>
 
                 <button onclick="openMonthlyModal()"
-                    class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">
-                    <div class="flex items-center gap-2"><i data-lucide="bar-chart-3" class="w-4 h-4"></i> Rekap Bulanan
-                    </div>
+                    class="flex w-full items-center gap-3 px-3 py-3 rounded-lg text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <i data-lucide="bar-chart-3" class="w-5 h-5"></i> Rekap Bulanan
                 </button>
 
                 <button onclick="toggleTheme()"
-                    class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
-                    <i data-lucide="sun-moon" class="inline w-4 h-4 mr-2"></i> Ganti Tema
+                    class="flex w-full items-center gap-3 px-3 py-3 rounded-lg text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <i data-lucide="sun-moon" class="w-5 h-5"></i> Ganti Tema
                 </button>
 
                 <button onclick="handleLogout()"
-                    class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">
-                    <div class="flex items-center gap-2"><i data-lucide="log-out" class="w-4 h-4"></i> Keluar</div>
+                    class="flex w-full items-center gap-3 px-3 py-3 rounded-lg text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">
+                    <i data-lucide="log-out" class="w-5 h-5"></i> Keluar
                 </button>
             </div>
         </div>
     </nav>
+
 
     <div id="lockedMessage"
         class="hidden bg-purple-600 text-white text-center py-2 font-bold text-sm tracking-wide shadow-md flex justify-center items-center gap-2">
