--- a/users.html
+++ b/users.html
@@ -16,89 +16,122 @@
             document.documentElement.classList.add('dark');
         }
     </script>
+    <style>
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .animate-fade-in {
+            animation: fadeIn 0.3s ease-out forwards;
+        }
+    </style>
 </head>
 
 <body class="bg-gray-50 dark:bg-darkbg text-gray-800 dark:text-gray-200 min-h-screen">
 
-    <nav class="bg-white dark:bg-darkcard border-b border-gray-200 dark:border-gray-700 sticky top-0 z-50 shadow-sm">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between h-16">
-                <!-- Left: Logo + Back Button -->
-                <div class="flex items-center gap-4">
-                    <div class="flex items-center gap-2 text-indigo-600 dark:text-indigo-400">
-                        <i data-lucide="layout-dashboard" class="w-6 h-6"></i>
-                        <h1 class="font-bold text-xl tracking-tight text-gray-900 dark:text-white">Admin Panel</h1>
-                    </div>
-                    <a href="index.html"
-                        class="hidden md:flex text-xs font-medium text-gray-400 hover:text-indigo-500 items-center gap-1 transition">
-                        <i data-lucide="arrow-left" class="w-3 h-3"></i> Ke Absensi
-                    </a>
+    <nav class="sticky top-0 z-50 bg-white dark:bg-darkcard border-b border-gray-200 dark:border-gray-700">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="flex h-16 items-center justify-between">
+
+                <!-- LEFT -->
+                <div class="flex items-center gap-3">
+                    <i data-lucide="layout-dashboard" class="w-6 h-6 text-indigo-600 dark:text-indigo-400"></i>
+                    <h1 class="text-lg font-bold text-gray-900 dark:text-white">
+                        Admin Panel
+                    </h1>
                 </div>
 
-                <!-- Right: Desktop Menu -->
-                <div class="hidden md:flex items-center gap-3">
+                <!-- RIGHT (Desktop) -->
+                <div class="hidden md:flex items-center gap-4">
+                    <a href="index.html"
+                        class="admin-only hidden flex items-center gap-2 px-3 py-2 text-xs font-bold text-purple-700 bg-purple-100 rounded-lg">
+                        <i data-lucide="arrow-left" class="w-5 h-5"></i>Ke Absensi
+                    </a>
                     <a href="admin.html"
-                        class="text-sm font-medium text-gray-500 hover:text-indigo-600 dark:text-gray-400 dark:hover:text-indigo-400 flex items-center gap-1 transition">
+                        class="flex items-center gap-1 text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-indigo-600">
                         <i data-lucide="database" class="w-4 h-4"></i> Data Master
                     </a>
+
                     <a href="users.html"
-                        class="text-sm font-medium text-gray-500 hover:text-indigo-600 dark:text-gray-400 dark:hover:text-indigo-400 flex items-center gap-1 transition">
+                        class="flex items-center gap-1 text-sm font-medium text-gray-600 dark:text-gray-300 hover:text-indigo-600">
                         <i data-lucide="users" class="w-4 h-4"></i> Users
                     </a>
 
                     <div class="h-6 w-px bg-gray-300 dark:bg-gray-600"></div>
-
-                    <!-- Profile Component (NEW) -->
                     <div id="navbar-profile"></div>
                 </div>
 
-                <!-- Mobile Menu Button -->
-                <div class="flex items-center md:hidden">
-                    <button id="mobile-menu-btn" class="text-gray-500 p-2 rounded-md">
-                        <i data-lucide="menu" class="w-6 h-6"></i>
-                    </button>
-                </div>
+                <!-- MOBILE BUTTON -->
+                <button id="mobile-menu-btn"
+                    class="md:hidden p-2 rounded-lg text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <i data-lucide="menu" class="w-6 h-6"></i>
+                </button>
             </div>
         </div>
 
-        <!-- Mobile Menu -->
-        <div id="mobile-menu" class="hidden md:hidden bg-white dark:bg-darkcard border-t dark:border-gray-700">
-            <div class="px-4 pt-2 pb-4 space-y-1 shadow-lg">
-                <!-- Profile in Mobile (NEW) -->
+        <!-- MOBILE MENU -->
+        <div id="mobile-menu"
+            class="hidden md:hidden bg-white dark:bg-darkcard border-t border-gray-200 dark:border-gray-700">
+            <div class="px-4 py-4 space-y-2">
+
+                <!-- PROFILE -->
                 <div class="border-b dark:border-gray-700 pb-3 mb-2">
-                    <div id="navbar-profile-mobile" class="px-3 py-2"></div>
+                    <div id="navbar-profile-mobile"></div>
                 </div>
 
                 <a href="index.html"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-gray-600 hover:bg-gray-50 dark:text-gray-300 dark:hover:bg-gray-800">
-                    <i data-lucide="arrow-left" class="inline w-4 h-4 mr-2"></i> Ke Absensi
+                    class="admin-only hidden flex items-center gap-3 px-3 py-3 rounded-lg text-purple-700 bg-purple-50">
+                    <i data-lucide="arrow-left" class="w-5 h-5"></i> Ke Absensi
                 </a>
+
                 <a href="admin.html"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
-                    <i data-lucide="database" class="inline w-4 h-4 mr-2"></i> Data Master
+                    class="flex items-center gap-3 px-3 py-3 rounded-lg text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <i data-lucide="database" class="w-5 h-5"></i> Data Master
                 </a>
+
                 <a href="users.html"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
-                    <i data-lucide="users" class="inline w-4 h-4 mr-2"></i> Manajemen User
+                    class="flex items-center gap-3 px-3 py-3 rounded-lg text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <i data-lucide="users" class="w-5 h-5"></i> Manajemen User
                 </a>
+
                 <button onclick="toggleTheme()"
-                    class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">
-                    <i data-lucide="sun-moon" class="inline w-4 h-4 mr-2"></i> Ganti Tema
+                    class="flex w-full items-center gap-3 px-3 py-3 rounded-lg text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <i data-lucide="sun-moon" class="w-5 h-5"></i> Ganti Tema
                 </button>
+
                 <button onclick="handleLogout()"
-                    class="block w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">
-                    <i data-lucide="log-out" class="inline w-4 h-4 mr-2"></i> Keluar
+                    class="flex w-full items-center gap-3 px-3 py-3 rounded-lg text-red-600 hover:bg-red-50 dark:hover:bg-red-900/20">
+                    <i data-lucide="log-out" class="w-5 h-5"></i> Keluar
                 </button>
             </div>
         </div>
     </nav>
 
-    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <main class="max-w-7xl mx-auto mt-5 px-4 sm:px-6 lg:px-8">
+        <!-- Add after the <h2> title, before the table -->
         <div class="mb-6">
-            <h2 class="text-xl md:text-2xl font-bold flex items-center gap-2">
-                <i data-lucide="users" class="w-6 h-6 text-blue-500"></i> Kontrol Akses Pengguna
-            </h2>
-            <p class="text-sm text-gray-500 mt-1">Verifikasi guru baru atau atur hak akses admin.</p>
+            <div class="flex flex-col md:flex-row md:justify-between md:items-start gap-4 mb-4">
+                <div>
+                    <h2 class="text-xl md:text-2xl font-bold flex items-center gap-2">
+                        <i data-lucide="users" class="w-6 h-6 text-blue-500"></i> Kontrol Akses Pengguna
+                    </h2>
+                    <p class="text-sm text-gray-500 mt-1">Verifikasi guru baru atau atur hak akses admin.</p>
+                </div>
+
+                <button id="btnRefreshUsers"
+                    class="inline-flex items-center gap-2 px-4 py-2.5 bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg shadow flex justify-center items-center gap-2 transition active:scale-95">
+                    <i data-lucide="refresh-cw" id="refreshIcon" class="w-4 h-4"></i>
+                    <span id="refreshText">Refresh</span>
+                </button>
+            </div>
         </div>
 
         <div class="w-full">
