feat: update HTML metadata and titles for improved SEO and user experience

--- a/users.html
+++ b/users.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manajemen User - Admin</title>
+    <title>Panel Admin - Manajemen Pengguna</title>
+    <meta name="description" content="Kontrol akses pengguna, verifikasi akun, dan pengaturan role admin.">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
+    <meta name="robots" content="noindex, nofollow">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
