--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>Panel Admin - Master Data</title>
+    <meta name="description" content="Manajemen data Master Kelas dan Siswa untuk operasional sekolah.">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
+    <meta name="robots" content="noindex, nofollow">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
