--- a/login.html
+++ b/login.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Sistem Absensi</title>
+    <title>Login - Sistem Absensi Digital</title>
+    <meta name="description" content="Masuk ke Sistem Absensi Digital untuk mengelola kehadiran siswa secara real-time.">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
+    <meta property="og:title" content="Login Absensi Digital">
+    <meta property="og:description" content="Akses manajemen kehadiran siswa berbasis Cloud.">
+    <meta property="og:image" content="assets/images/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
@@ -42,40 +47,40 @@
 <body class="bg-gray-100 dark:bg-darkbg text-gray-800 dark:text-gray-200 min-h-screen flex items-center justify-center p-4">
 
     <div class="max-w-md w-full bg-white dark:bg-darkcard rounded-2xl shadow-xl border border-gray-200 dark:border-gray-700 overflow-hidden fade-in">
-        <div class="p-8">
-            <div class="text-center mb-8">
-                <div class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-blue-100 dark:bg-blue-900 mb-4">
-                    <i data-lucide="calendar-check" class="w-6 h-6 text-blue-600 dark:text-blue-300"></i>
-                </div>
-                <h1 class="text-3xl font-extrabold text-gray-900 dark:text-white tracking-tight">ABSENSI</h1>
-                <p class="text-sm text-gray-500 dark:text-gray-400 mt-2">Masuk untuk mengelola kehadiran siswa</p>
+    <div class="p-8">
+        <div class="text-center mb-8">
+            <div class="inline-flex items-center justify-center w-20 h-20 rounded-2xl bg-gray-50 dark:bg-gray-800 mb-4 shadow-inner">
+                <img src="assets/images/logo.png" alt="Logo Absensi" class="w-16 h-16 object-contain">
             </div>
+            
+            <h1 class="text-3xl font-extrabold text-gray-900 dark:text-white tracking-tight uppercase">ABSENSI</h1>
+            <p class="text-sm text-gray-500 dark:text-gray-400 mt-2">Masuk untuk mengelola kehadiran siswa</p>
+        </div>
 
-            <div class="space-y-4">
-                <button id="btnGoogleLogin"
-                    class="w-full flex items-center justify-center gap-3 bg-white hover:bg-gray-50 text-gray-700 font-semibold py-3 px-4 rounded-xl border border-gray-300 shadow-sm transition transform active:scale-95 disabled:opacity-50 disabled:cursor-not-allowed">
-                    <img id="g-logo" src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png"
-                        class="w-5 h-5" alt="Google Logo">
-                    <div id="loader-icon" class="hidden loader w-5 h-5 border-2 border-gray-200 rounded-full"></div>
-                    <span id="btn-text">Masuk dengan Google</span>
-                </button>
+        <div class="space-y-4">
+            <button id="btnGoogleLogin"
+                class="w-full flex items-center justify-center gap-3 bg-white hover:bg-gray-50 text-gray-700 font-semibold py-3 px-4 rounded-xl border border-gray-300 shadow-sm transition transform active:scale-95 disabled:opacity-50 disabled:cursor-not-allowed">
+                <img id="g-logo" src="https://www.gstatic.com/images/branding/product/1x/gsa_512dp.png"
+                    class="w-5 h-5" alt="Google Logo">
+                <div id="loader-icon" class="hidden loader w-5 h-5 border-2 border-gray-200 rounded-full"></div>
+                <span id="btn-text">Masuk dengan Google</span>
+            </button>
 
-                <!-- Status Message (NEW) -->
-                <div id="status-message" class="hidden text-center text-sm">
-                    <div class="flex items-center justify-center gap-2 text-blue-600 dark:text-blue-400">
-                        <div class="w-4 h-4 border-2 border-blue-600 border-t-transparent rounded-full animate-spin"></div>
-                        <span id="status-text">Memverifikasi...</span>
-                    </div>
+            <div id="status-message" class="hidden text-center text-sm">
+                <div class="flex items-center justify-center gap-2 text-blue-600 dark:text-blue-400">
+                    <div class="w-4 h-4 border-2 border-blue-600 border-t-transparent rounded-full animate-spin"></div>
+                    <span id="status-text">Memverifikasi...</span>
                 </div>
-            </div>
-
-            <div class="mt-8 pt-6 border-t dark:border-gray-700 text-center">
-                <p class="text-xs text-gray-400 flex justify-center items-center gap-1">
-                    <i data-lucide="life-buoy" class="w-3 h-3"></i> Pusat Bantuan: IT Support Absensi
-                </p>
             </div>
         </div>
+
+        <div class="mt-8 pt-6 border-t dark:border-gray-700 text-center">
+            <p class="text-xs text-gray-400 flex justify-center items-center gap-1">
+                <i data-lucide="life-buoy" class="w-3 h-3"></i> Pusat Bantuan: IT Support Absensi
+            </p>
+        </div>
     </div>
+</div>
 
     <script type="module">
         import { initAuthGuard } from './assets/js/utils/auth-guard.js';
