fix: adjust table cell styling for better readability and add padding to app area

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
         </div>
 
-        <div id="appArea" class="space-y-4">
+        <div id="appArea" class="space-y-4 pb-32 md:pb-0">
             <div id="loadingText" class="text-center text-gray-400 mt-20 flex flex-col items-center gap-3">
                 <i data-lucide="mouse-pointer-2" class="w-12 h-12 opacity-20"></i>
                 <span class="italic">Silakan pilih tanggal & kelas untuk memulai.</span>
