ui: add logout in index and admin

--- a/admin.html
+++ b/admin.html
@@ -90,6 +90,9 @@
                     class="flex w-full items-center gap-3 px-3 py-3 rounded-lg text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">
                     <i data-lucide="sun-moon" class="w-5 h-5"></i> Ganti Tema
                 </button>
+                <button onclick="handleLogout()" class="flex w-full items-center gap-3 px-3 py-3 rounded-lg text-red-600 hover:bg-red-50">
+                    <i data-lucide="log-out" class="w-5 h-5"></i> Keluar
+                </button>
             </div>
         </div>
     </nav>
